# turtlebot3_manipulation_simulations

./: .gitignore  README.md
tb3_manipulation_gazebo_spawner/: package.xml  setup.cfg  setup.py
tb3_manipulation_gazebo_spawner/tb3_manipulation_gazebo_spawner/: gz_spawner_test.py  tb3_manipulation_gazebo_spawner.py  test1.urdf  test2.urdf
tb3m_control/: CMakeLists.txt  package.xml
tb3m_control/src/: open_manipulator_block_pick_up.cpp
turtlebot3_manipulation_gazebo/: CMakeLists.txt  package.xml
turtlebot3_manipulation_gazebo/config/: arm_controller.yaml  gazebo_controller.yaml  gripper_controller.yaml  gz_controller.yaml  gz_controller_test.yaml  joint_state_controller.yaml
turtlebot3_manipulation_gazebo/launch/: control_example.launch.py  controller_utils.launch.py  moon_slam.launch.py  rviz_launch.py  tb3_manipulation_slam.launch.py  tb3_manipulation_test.launch.py  turtlebot3_manipulation_controller.launch.py  turtlebot3_manipulation_gazebo.launch.py
turtlebot3_manipulation_gazebo/models/: README.MD  generate_symbolic_model_library.py  turtlebot3_waffle_manipulator.urdf  turtlebot3_waffle_manipulator.urdf.xacro
turtlebot3_manipulation_gazebo/models/open_manipulator_x_description/: model.config  model.urdf
turtlebot3_manipulation_gazebo/models/open_manipulator_x_description/meshes/: chain_link1.stl  chain_link2.stl  chain_link3.stl  chain_link4.stl  chain_link5.stl  chain_link_grip_l.stl  chain_link_grip_r.stl
turtlebot3_manipulation_gazebo/models/open_manipulator_x_description/urdf/: materials.xacro  open_manipulator_x.gazebo.xacro  open_manipulator_x.transmission.xacro  open_manipulator_x.urdf.xacro  open_manipulator_x_robot.urdf.xacro
turtlebot3_manipulation_gazebo/models/turtlebot3_description/: model.config
turtlebot3_manipulation_gazebo/models/turtlebot3_description/meshes/bases/: burger_base.stl  waffle_base.stl  waffle_pi_base.stl
turtlebot3_manipulation_gazebo/models/turtlebot3_description/meshes/sensors/: astra.dae  lds.stl  r200.dae
turtlebot3_manipulation_gazebo/models/turtlebot3_description/meshes/wheels/: left_tire.stl  right_tire.stl
turtlebot3_manipulation_gazebo/models/turtlebot3_description/urdf/: common_properties.urdf  turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
turtlebot3_manipulation_gazebo/models/turtlebot3_waffle_manipulator/: model.config  model.urdf
turtlebot3_manipulation_gazebo/scripts/: test_parse.py
turtlebot3_manipulation_gazebo/urdf/: test.urdf  test2.sdf  test2.urdf  test_nogazebo.urdf  turtlebot3_pi.xacro  turtlebot3_pi_base.xacro  turtlebot3_pi_gazebo.xacro  turtlebot3_pi_manipulator.xacro
turtlebot3_manipulation_simulations/: CMakeLists.txt  package.xml
